# TesiMagistraleN3IWF2

./: .gitignore  README.md  buildN3iwf_E2.sh  clear_xfrmi.sh  dcb.yaml  privateKeyEd25519  pusha.sh  runN3iwfE2.sh  sctp_connect_test  sctp_connect_test.cpp  setup-gtp5g.sh  testSCTP  testSCTP.cpp
cert/: nrf.pem
config/: amfcfg.yaml  e2node.yaml  n3iwf-route.sh  n3iwfcfg.yaml  smfcfg.yaml  start-n3iwf.sh  upfcfg.yaml
e2sim/: CMakeLists.txt  Dockerfile  Makefile.am.asn1convert  Makefile.am.libasncodec  app_state.hpp  converter-example.mk  e2sim.cpp  e2sim.hpp  encode_e2apv2.cpp  encode_e2apv2.hpp  encode_kpm.cpp  encode_kpm.hpp  encode_rc.cpp  encode_rc.hpp  kpm_callbacks.cpp  kpm_callbacks.hpp  n3iwf_data.cpp  n3iwf_data.hpp  n3iwf_utils.cpp  n3iwf_utils.hpp  rc_callbacks.cpp  rc_callbacks.hpp  rc_ids.hpp  subscription_key.hpp
e2sim/ASN1CTest/: Makefile.am.libasncodec
e2sim/ASN1c/: AMFName.c  Cause.c  CauseE2node.c  CauseMisc.c  CauseProtocol.c  CauseRICrequest.c  CauseRICservice.c  CauseTransport.c  Criticality.c  CriticalityDiagnostics-IE-Item.c  CriticalityDiagnostics-IE-List.c  CriticalityDiagnostics.c  E2AP-PDU.c  E2RemovalFailure.c  E2RemovalRequest.c  E2RemovalResponse.c  E2connectionSetupFailed-Item.c  E2connectionSetupFailed-List.c  E2connectionUpdate-Item.c  E2connectionUpdate-List.c  E2connectionUpdate.c  E2connectionUpdateAcknowledge.c  E2connectionUpdateFailure.c  E2connectionUpdateRemove-Item.c  E2connectionUpdateRemove-List.c  E2nodeComponentConfigAddition-Item.c  E2nodeComponentConfigAddition-List.c  E2nodeComponentConfigAdditionAck-Item.c  E2nodeComponentConfigAdditionAck-List.c  E2nodeComponentConfigRemoval-Item.c  E2nodeComponentConfigRemoval-List.c  E2nodeComponentConfigRemovalAck-Item.c  E2nodeComponentConfigRemovalAck-List.c  E2nodeComponentConfigUpdate-Item.c  E2nodeComponentConfigUpdate-List.c  E2nodeComponentConfigUpdateAck-Item.c  E2nodeComponentConfigUpdateAck-List.c  E2nodeComponentConfiguration.c  E2nodeComponentConfigurationAck.c  E2nodeComponentID.c  (+157 more)
e2sim/asnfiles/: e2sm-common-constants.asn.old  e2sm-common-ie.asn.old  e2sm_kpm_v03.00_modified.asn1.old  e2sm_rc_v1_03_modified.asn.old
e2sim/backupASN1/: AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFName.c  AMFName.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  ANY_jer.c  BIT_STRING_xer.c  BinIndex.c  BinIndex.h  BinRangeDefinition.c  BinRangeDefinition.h  BinRangeItem.c  BinRangeItem.h  BinRangeList.c  BinRangeList.h  BinRangeValue.c  BinRangeValue.h  CGI.c  CGI.h  CallProcessBreakpoint-RANParameter-Item.c  CallProcessBreakpoint-RANParameter-Item.h  Cause.c  Cause.h  CauseE2node.c  CauseE2node.h  CauseMisc.c  CauseMisc.h  CauseProtocol.c  CauseProtocol.h  CauseRICrequest.c  CauseRICrequest.h  CauseRICservice.c  CauseRICservice.h  CauseTransport.c  CauseTransport.h  (+957 more)
e2sim/src/DEF/: e2sim_defs.cpp  e2sim_defs.h  global_ts.cpp
e2sim/src/E2AP/: e2ap_message_handler.cpp  e2ap_message_handler.hpp
e2sim/src/SCTP/: e2sim_sctp.c  e2sim_sctp.cpp  e2sim_sctp.hpp
e2sim/test/: rc_control_test.cpp  test_kpm_decode.cpp  test_kpm_report_loop.cpp
n3iwfCustom/: Dockerfile  go.sum
n3iwfCustom/cmd/: main.go
n3iwfCustom/config/: n3iwfcfg.yaml
n3iwfCustom/internal/context/: context.go  ikeue.go  ngap.go  ranue.go
n3iwfCustom/internal/ike/: handler.go
n3iwfCustom/internal/logger/: kpm_logger.go  rc_logger.go
n3iwfCustom/internal/ngap/: dispatcher.go  handler.go
n3iwfCustom/internal/ngap/message/: handover.go  pathswitch.go
n3iwfCustom/internal/nwuup/: server.go
n3iwfCustom/internal/rc/: enrich.go  handover_alert.go  wifi_metrics.go
n3iwfCustom/internal/snapshot/: rc_store.go  snapshot.go
n3iwfCustom/pkg/factory/: config.go
n3iwf_e2logger/: kpm_data.json  n3iwfConfig.json  n3iwf_e2.json  n3iwf_e2_rc.json  rc_metrics.json
nf_n3iwf/: Dockerfile  DockerfileBase
wifi_metrics/: exporter.py  metrics.json  metrics.prom
